[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player/Player.gd" type="Script" id=1]
[ext_resource path="res://prefabs/weapons/player/Si230.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/player/Interactions.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=3]
mid_height = 2.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="BodyCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
shape = SubResource( 1 )

[node name="IsOnFloor" type="RayCast" parent="BodyCollider"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 9.17939e-08, -2.1 )
enabled = true
cast_to = Vector3( 0, -0.1, 0 )

[node name="CamRot" type="Spatial" parent="BodyCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.37114e-09, 0.0999999 )

[node name="Camera" type="Camera" parent="BodyCollider/CamRot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
current = true
script = ExtResource( 3 )

[node name="Weapons" type="Spatial" parent="BodyCollider/CamRot/Camera"]

[node name="Si230" parent="BodyCollider/CamRot/Camera/Weapons" instance=ExtResource( 2 )]
transform = Transform( -3.09086e-08, -0.707107, -0.707107, -3.09086e-08, 0.707107, -0.707107, 1, 0, -4.37114e-08, 0.2, -0.6, -1.1 )

[node name="UseCast" type="RayCast" parent="BodyCollider/CamRot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true

[node name="MeshInstance" type="MeshInstance" parent="BodyCollider"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0 )
visible = false
material_override = SubResource( 2 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIControl" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
